# llmcmd

./: .gitignore  .jscpd.json  .llmcmdrc.example  CHANGELOG.md  COMMAND_INTEGRATION_CHECKLIST.md  Makefile  RASPBERRY_PI_INSTALL.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v3.0.1.md  RELEASE_NOTES_v3.1.1.md  TODO_ISSUES.md  backlog-processing-20250802-071301.md  bash_mode.conf  broken_config.json  build-cross-platform.sh  build-release.sh  code-clone-analysis-report.md  config.json  context-memory.db  context-memory.db-shm  context-memory.db-wal  create-release-archives.sh  cut.go  debug_test  demo_patch.sh  diff_test  fsproxy-protocol.md  go.mod  help_builtin.go  install.sh  invalid_values_config.json  llmsh  llmsh-test  log_analysis_test.txt  mcp_assoc_memory_issue_proposal.md  mcp_tools_improvement_analysis.md  nl.go  package.json  patch_test  (+32 more)
.github/: copilot-instructions.md
data/: contexts.db  memory.db  memory.db-shm  memory.db-wal  shared-memory.db
docs/: ARCHITECTURE_REVIEW_v3.1.1.md  BASELINE_RECURSION_SPEC.md  CONFIGURATION.md  DESIGN_STATUS.md  MANDATORY_PROCESS_CHECKLIST.md  MINIMAL_SHELL_SPEC.md  NEW_SHELL_SPEC_DRAFT.md  SPRINT_1_REVIEW_SPRINT_2_BACKLOG.md  STRATEGIC_DIRECTION_v3.1.1.md  TWO_STAGE_LLM_ARCHITECTURE.md  fit-gap-analysis.md  fsproxy-protocol.md  fsproxy-test-plan.md  implementation-plan.md  llmcmd_llmsh_design_philosophy.md  llmsh-integration-design.md  openai-api-research.md  (+8 more)
llmsh-rs/: Cargo.toml  out.txt
llmsh-rs/src/: main.rs  mux.rs
llmsh-rs/tests/: mux_parallel.rs  sed_addr.rs  sed_basic.rs  sed_branch.rs  sed_hold.rs
(+204 files in other folders)
