[package]
name = "llmsh-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.28", default-features = false, features = ["process","fs","socket","poll"] }
thiserror = "1"
base64 = "0.22"
regex = "1"
libc = "0.2"
atty = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
